tests/NormalTests/paczka1/small_fuzzy/60744694.err
Error in line 2: tYUd A531 96,2
Error in line 10: tYUd A493 47,07
Error in line 8: tYUd A493 28,9
